DEV-2578: Fix vertical gap between elements in result page

--- a/packages/nyris-webapp/src/page/landingPage/common.scss
+++ b/packages/nyris-webapp/src/page/landingPage/common.scss
@@ -1767,6 +1767,7 @@ button {
 }
 
 .pagination-result {
+  height: fit-content;
   .ais-Pagination-list {
     flex-wrap: nowrap !important;
     text-align: center;
